fix extra height bug on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -48,8 +48,7 @@ a:hover {
 /* content */
 
 .container {
-    height: 100vh;
-    width: 70vw;
+    height: calc(100vh - 1rem);
     margin: 2rem auto 1rem;
     padding: 2rem;
 }
